--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -25,5 +25,6 @@ body {
 
 main {
   height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
